user pages are as robust a the account page adn swagger update
