# OpenAPI/shift.yaml
@@ -496,7 +496,7 @@ paths:
   /api/user/data/shifts:
     get:
       description: The users shifts to display the users account page.
-      operationId: userShifts
+      operationId: shifts
       parameters: []
       responses:
         default:
@@ -519,6 +519,22 @@ paths:
             $ref: '#/definitions/ProfileResponse'
       security:
       - UserAuth: []
+      tags:
+      - User
+  /api/user/{username}/shifts:
+    get:
+      description: The shifts associated with the queried user.
+      operationId: getUsersShifts
+      parameters:
+      - in: path
+        name: username
+        required: true
+        type: string
+      responses:
+        default:
+          description: The shifts for the user who is logged in.
+          schema:
+            $ref: '#/definitions/UserShiftsResponse'
       tags:
       - User
   /api/user/data/updatePicture:
