# src/Swagger/apis/UserApi.ts
@@ -46,6 +46,10 @@ export interface GetIndivdualUserRequest {
     username: string;
 }
 
+export interface GetUsersShiftsRequest {
+    username: string;
+}
+
 export interface PatchIndivdualUserRequest {
     username: string;
     body?: IndividualUserPatchRequest;
@@ -125,6 +129,36 @@ export class UserApi extends runtime.BaseAPI {
     }
 
     /**
+     * The shifts associated with the queried user.
+     */
+    async getUsersShiftsRaw(requestParameters: GetUsersShiftsRequest): Promise<runtime.ApiResponse<UserShiftsResponse>> {
+        if (requestParameters.username === null || requestParameters.username === undefined) {
+            throw new runtime.RequiredError('username','Required parameter requestParameters.username was null or undefined when calling getUsersShifts.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/api/user/{username}/shifts`.replace(`{${"username"}}`, encodeURIComponent(String(requestParameters.username))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => UserShiftsResponseFromJSON(jsonValue));
+    }
+
+    /**
+     * The shifts associated with the queried user.
+     */
+    async getUsersShifts(requestParameters: GetUsersShiftsRequest): Promise<UserShiftsResponse> {
+        const response = await this.getUsersShiftsRaw(requestParameters);
+        return await response.value();
+    }
+
+    /**
      * Updates/modifies the queried user.
      */
     async patchIndivdualUserRaw(requestParameters: PatchIndivdualUserRequest): Promise<runtime.ApiResponse<IndividualUserPatchResponse>> {
@@ -192,6 +226,36 @@ export class UserApi extends runtime.BaseAPI {
     }
 
     /**
+     * The users shifts to display the users account page.
+     */
+    async shiftsRaw(): Promise<runtime.ApiResponse<UserShiftsResponse>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.apiKey) {
+            headerParameters["session"] = this.configuration.apiKey("session"); // UserAuth authentication
+        }
+
+        const response = await this.request({
+            path: `/api/user/data/shifts`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => UserShiftsResponseFromJSON(jsonValue));
+    }
+
+    /**
+     * The users shifts to display the users account page.
+     */
+    async shifts(): Promise<UserShiftsResponse> {
+        const response = await this.shiftsRaw();
+        return await response.value();
+    }
+
+    /**
      * Changes the users profile picture to the uploaded picture.
      */
     async updatePictureRaw(requestParameters: UpdatePictureRequest): Promise<runtime.ApiResponse<UpdatePictureResponse>> {
@@ -243,36 +307,6 @@ export class UserApi extends runtime.BaseAPI {
      */
     async updatePicture(requestParameters: UpdatePictureRequest): Promise<UpdatePictureResponse> {
         const response = await this.updatePictureRaw(requestParameters);
-        return await response.value();
-    }
-
-    /**
-     * The users shifts to display the users account page.
-     */
-    async userShiftsRaw(): Promise<runtime.ApiResponse<UserShiftsResponse>> {
-        const queryParameters: any = {};
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        if (this.configuration && this.configuration.apiKey) {
-            headerParameters["session"] = this.configuration.apiKey("session"); // UserAuth authentication
-        }
-
-        const response = await this.request({
-            path: `/api/user/data/shifts`,
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        });
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => UserShiftsResponseFromJSON(jsonValue));
-    }
-
-    /**
-     * The users shifts to display the users account page.
-     */
-    async userShifts(): Promise<UserShiftsResponse> {
-        const response = await this.userShiftsRaw();
         return await response.value();
     }
 
